Fix: Java 16 > Java 8